--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -32,6 +32,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
+    - name: Azure Login
+      uses: Azure/login@v1.6.1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
 
