--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -35,8 +35,9 @@ jobs:
     - name: Azure Login
       uses: Azure/login@v1.6.1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
 
