--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-# DO NOT include azure-functions-worker in this file
-# The Python Worker is managed by Azure Functions platform
-# Manually managing azure-functions-worker may cause unexpected issues
-
-azure-functions
+pandas==1.3.3
+scikit-learn==0.24.2
+fuzzywuzzy==0.18.0
+translators==4.9.5
+numpy==1.21.2
+scipy==1.7.1
+python-Levenshtein==0.12.2
+python-dateutil==2.8.2
+flask==2.0.1
+Werkzeug==2.2.2
