--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/startg2545/recommendation-system"
+Issues = "https://github.com/startg2545/recommendation-system/issues"
