--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-pandas==1.3.3
-scikit-learn==0.24.2
 fuzzywuzzy==0.18.0
-translators==4.9.5
-numpy==1.21.2
-scipy==1.7.1
-python-Levenshtein==0.12.2
-python-dateutil==2.8.2
-flask==2.0.1
-Werkzeug==2.2.2
-gunicorn==20.1.0
+joblib==1.3.2
+Levenshtein==0.25.0
+numpy==1.26.4
+pandas==2.2.1
+python-dateutil==2.9.0.post0
+python-Levenshtein==0.25.0
+pytz==2024.1
+rapidfuzz==3.6.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+six==1.16.0
+threadpoolctl==3.3.0
+tzdata==2024.1
