--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "isne-recommendation"
-version = "0.0.4"
+version = "0.0.5"
 dependencies = [
   'fuzzywuzzy==0.18.0',
   'joblib==1.3.2',
@@ -16,6 +16,7 @@ dependencies = [
   'six==1.16.0',
   'threadpoolctl==3.3.0',
   'tzdata==2024.1',
+  'openpyxl==3.1.2',
 ]
 authors = [
   { name="Newin Yamaguchi", email="newin_yamaguchi@cmu.ac.th" },
