--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "isne-recommendation"
-version = "0.0.9"
+version = "0.1.0"
 dependencies = [
   'fuzzywuzzy==0.18.0',
   'joblib==1.3.2',
   'Levenshtein==0.25.0',
   'numpy==1.26.4',
-  'pandas==2.2.1',
+  'pandas==1.5.3',
   'python-dateutil==2.9.0.post0',
   'python-Levenshtein==0.25.0',
   'pytz==2024.1',
@@ -21,7 +21,7 @@ dependencies = [
 authors = [
   { name="Newin Yamaguchi", email="newin_yamaguchi@cmu.ac.th" },
 ]
-description = "Our recommendation system will offer you the products or services that users are interested in and consume."
+description = "The recommendation system aims to suggest the best suitable courses for learners who have taken at least one course."
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
